Listen for dateRequest updates on profile view and chat view in order to update view status according.

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -124,8 +124,9 @@
 "vm.profile.contactTitle"="Contact";
 "vm.profile.acceptRequestTitle"="Accept request";
 "vm.profile.acceptedRequestButtonTitle"="Chat";
-"vm.profile.rejectedRequestButtonTitle"="Rejected";
+"vm.profile.rejectedRequestButtonTitle"="Request rejected";
 "vm.profile.sentRequestButtonTitle"="Request sent";
+"vm.profile.endedRequestButtonTitle"="Date ended";
 
 // Views/components/GZERatingView
 "vm.ratingView.unrated"="Unrated";
