Implemented users location tracking when date starts

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -131,6 +131,10 @@
 // Views/components/GZERatingView
 "vm.ratingView.unrated"="Unrated";
 
+// Views/components/Map/GZEPinAnnotation
+"vm.pinAnnotation.loading"="Loading...";
+"vm.pinAnnotation.pinTitle"="Date place";
+
 // AuthService
 "vm.authService.sessionExpired"="Your session has expired. Please log in";
 
