Added profile sign up interests picker. On chat view controller, the top action view was modified, now when the accessory button is hidden the title uses all the space available

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -72,6 +72,11 @@
 
 "vm.signUp.textField.validation.failed"="Enter valid information";
 
+"vm.signUp.interests.friendlyDates" = "Friendly dates";
+"vm.signUp.interests.searchPartner" = "Searching partner";
+"vm.signUp.interests.sporadicDates" = "Sporadic dates";
+"vm.signUp.interests.littleBitOfEvth" = "Little bit of everything";
+
 // ViewModel/GZESignUpViewModel - GZESignUpPhotoViewController
 "vm.signUp.profilePictureLabel"="Profile picture";
 "vm.signUp.searchPictureLabel"="Search picture";
