Made navigation buttons(close, next, back) 1px wider. Added terms & conditions view. Added navigation close button on profile view. Made user balloons bigger on search view.

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -63,6 +63,9 @@
 "female"="female";
 "other"="other";
 
+// ViewModel/GZEWebViewModelTerms
+"vm.web.terms"="Terms & conditions";
+
 // ViewModel/GZESignUpViewModel - GZESignUpBasicViewController
 "vm.signUp.viewTitle"="Sign up";
 "vm.signUp.facebookSignUpButtonTitle"="Sign up with Facebook";
