--- a/Gooze/es.lproj/Localizable.strings
+++ b/Gooze/es.lproj/Localizable.strings
@@ -171,7 +171,8 @@
 
 // ViewModel/GZEPickerUIToolbar
 "vm.pickerToolbar.closeButton.title"="X";
-"vm.pickerToolbar.doneButton.title"="Siguiente";
+"vm.pickerToolbar.nextButton.title"="Siguiente";
+"vm.pickerToolbar.doneButton.title"="Ok";
 
 // Views/GZEBlurViewController
 "label.blurView.applyButtonTitle"="Aplicar";
