Changed pay view. The las element of the list will be an "Add button". Change bottom button to be "Pay" button instead of current "Add"

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -179,6 +179,7 @@
 "vm.paymentMethods.add"="Add";
 "vm.paymentMethods.addMethod"="Add payment method";
 "vm.paymentMethods.title.selectMethod"="Select payment method";
+"vm.paymentMethods.pay"="Pay";
 
 // ViewModel/GZEHelViewModelGooze
 "vm.help.title"="Help";
